# ez-code-generator

./: .bumpversion.toml  .gitlab-ci.yml  README.md  gradle.properties  pyproject.toml
generatedCodeTests/PyApiAsyncClientGenerator/: test_client.py
generatedCodeTests/PyApiClientGenerator/: test_clent.py
generatedCodeTests/sidecars/mock_server/: server.py  utils.py
src/main/resources/: application.properties  builtinExtensions.json
src/main/resources/templates/python/: apiClientBody.py  baseJsonHttpAsyncClient.py  baseJsonHttpClient.py  strEnum.py
src/test/resources/input/: endpoints.json  entities.json  openApi.json  openApi.yaml
src/test/resources/org/codegen/generators/KtSerializableDataclassGenerator/: entitiesOutput.kt  entitiesOutputJacksonEnabled.kt
src/test/resources/org/codegen/generators/PyAmqpBlockingClientGenerator/: endpointsOutput.py
src/test/resources/org/codegen/generators/PyAmqpGeventClientGenerator/: endpointsOutput.py
src/test/resources/org/codegen/generators/PyApiAsyncClientGenerator/: endpointsOutput.py
src/test/resources/org/codegen/generators/PyApiClientGenerator/: endpointsOutput.py  openApiOutput.py
src/test/resources/org/codegen/generators/PyDataclassGenerator/: entitiesCustomDecoratorArgsOutput.py  entitiesOutput.py
src/test/resources/org/codegen/generators/PyDjangoModelGenerator/: entitiesOutput.py  openApiOutput.py
src/test/resources/org/codegen/generators/PyMarshmallowDataclassGenerator/: entitiesOutput.py
